[package]
name = "google-drive-api"
version = "0.0.0"
authors = ["Erik Funder Carstensen <fundererik@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
serde = {version = "1.0.125", features = ["derive"]}
reqwest = {version = "0.11", features = ["json"]}
oauth2 = "4"
bytes = "1.0.1"
